--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -486,7 +486,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 20px 0;
   }
   .hero-content::after {
     content: unset;
@@ -495,7 +495,7 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
   }
   .hero-text {
