--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  /* background-image: url("background.png"); */
+  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -389,12 +389,6 @@ input[data-error]::after {
   right: 0;
   z-index: 99;
 }
-
-/* Hide the items when the select box is closed: */
-.select-hide {
-  display: none;
-}
-
 .select-items div:hover,
 .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
@@ -404,6 +398,33 @@ input[data-error]::after {
   font-weight: normal;
   font-size: 16px;
 }
+
+/* Hide the items when the select box is closed: */
+/* change "select-hide" by "hidden" */
+.hidden {
+  display: none;
+}
+.flex {
+  display: flex;
+}
+.block {
+  display: block;
+}
+/* Congrats styles */
+.congrats-container {
+  justify-items: center;
+  align-items: center;
+}
+.congrats-text {
+  text-align: center;
+  padding: 2rem 1rem;
+  font-size: 1.6rem;
+  font-weight: normal;
+  color: white;
+}
+
+
+/* Hero styles */
 .hero-section {
   min-height: 93vh;
   border-radius: 10px;
