--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
+  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -400,7 +400,7 @@ input[data-error]::after {
 }
 
 /* Hide the items when the select box is closed: */
-/* change "select-hide" by "hidden" */
+.select-hide,
 .hidden {
   display: none;
 }
@@ -410,18 +410,20 @@ input[data-error]::after {
 .block {
   display: block;
 }
-/* Congrats styles */
-.congrats-container {
+
+/* Success message form styles */
+.success-message {
   justify-items: center;
   align-items: center;
 }
-.congrats-text {
+.success-message__text {
   text-align: center;
   padding: 2rem 1rem;
   font-size: 1.6rem;
   font-weight: normal;
   color: white;
 }
+/* End success message form styles */
 
 
 /* Hero styles */
