--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -49,7 +49,7 @@ img {
 
 .header-logo img {
   margin-top: 5px;
-  height: 40px;
+  height: 35px;
 }
 
 .main-navbar {
@@ -88,72 +88,6 @@ img {
   border-radius: 15px;
   background-color: transparent;
   font-size: 30px;
-}
-
-@media screen and (max-width: 1000px) {
-  main,
-  footer {
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
-  .topnav {
-    margin: 3.5%;
-  }
-  .topnav a {
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-
-  .header-logo img {
-    margin-top: 20px;
-    height: 32px;
-  }
-
-  .topnav.responsive .header-logo img {
-    margin-top: 12px;
-  }
-
-  .topnav.responsive {
-    position: relative;
-    padding-right: 60px;
-    padding-top: 5px;
-  }
-
-  .topnav.responsive .icon {
-    color: white;
-    background-color: red;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
-@media screen and (max-width: 540px) {
-  .header-logo img {
-    margin-top: 25px;
-    height: 25px;
-  }
-
-  .topnav a {
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
 }
 
 main {
@@ -488,13 +422,20 @@ input {
 /* Success message form styles */
 .success-message {
   flex-direction: column;
-  justify-items: center;
-  align-items: center;
 }
 
 .success-message__text {
+  flex: 1;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.success-message__text p {
   text-align: center;
-  padding: 2rem 1rem;
   font-size: 1.6rem;
   font-weight: normal;
   color: white;
@@ -588,6 +529,57 @@ footer {
   margin: 0 20px;
 }
 
+
+@media screen and (max-width: 1000px) {
+
+  main,
+  footer {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+
+  .topnav {
+    margin: 3.5%;
+  }
+
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .header-logo img {
+    margin-top: 20px;
+    height: 32px;
+  }
+
+  .topnav.responsive .header-logo img {
+    margin-top: 12px;
+  }
+
+  .topnav.responsive {
+    position: relative;
+    padding-right: 60px;
+  }
+
+  .topnav.responsive .icon {
+    color: white;
+    background-color: red;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
@@ -633,6 +625,30 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .header-logo img {
+    margin-top: 25px;
+    height: 25px;
+  }
+
+  .hero-headline {
+    font-size: 2.5rem;
+  }
+
+  .hero-text {
+    font-size: 1.3rem;
+  }
+
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
 }
 
